<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"    >

    <LinearLayout
        android:id="@+id/LY_V01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="162dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            tools:src="@drawable/log" />



        <EditText
            android:id="@+id/ETusr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop = "10dp"
            android:hint="@string/str_tv1"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/ETpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop = "10dp"
            android:hint="@string/str_tv2"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn01"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="18sp"
            android:background="#2196F3"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>